Fix notification z-index to not conflict with react-modal

--- a/resources/styl/components/notification.styl
+++ b/resources/styl/components/notification.styl
@@ -1,4 +1,6 @@
 .c-notification
+  z-index inherit !important
+
   a, span
     text-decoration none
     color inherit
